# rust-hex

./: .gitignore  .gitlab-ci-matrix.yml  .gitlab-ci.yml  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  MSRV-POLICY.md  README.md
.github/workflows/: build.yml  ci.yml  rust.yml
benches/: hex.rs
src/: error.rs  lib.rs  serde.rs  traits.rs
tests/: serde-heapless.rs  serde.rs  version-number.rs
