[package]
name = "hex"
version = "0.4.0"
authors = ["KokaKiwi <kokakiwi@kokakiwi.net>"]
description = "Encoding and decoding data into/from hexadecimal representation."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hex/"
repository = "https://github.com/KokaKiwi/rust-hex"
edition = "2018"

[features]
default = ["std"]
std = []

[[bench]]
name = "hex"
harness = false

[dev-dependencies]
criterion = "0.3"
rustc-hex = "2.0"
faster-hex = "0.4"
