[package]
name = "hex"
version = "0.4.3"
authors = ["KokaKiwi <kokakiwi@kokakiwi.net>"]
description = "Encoding and decoding data into/from hexadecimal representation."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hex/"
repository = "https://github.com/KokaKiwi/rust-hex"
edition = "2018"
readme = "README.md"
keywords = ["no_std", "hex"]
categories = ["encoding", "no-std"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
alloc = []
std = ["alloc"]

[[bench]]
name = "hex"
harness = false

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.5.1"
data-encoding = "2.6.0"
rustc-hex = "2.1.0"
faster-hex = "0.10.0"
version-sync = "0.9.5"
pretty_assertions = "1.4.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
